--- a/error-chain-mini-derive/Cargo.toml
+++ b/error-chain-mini-derive/Cargo.toml
@@ -3,9 +3,10 @@ name = "error-chain-mini-derive"
 version = "0.0.1"
 authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
 description = "derives for error-chain-mini"
-license = "MIT OR Apache-2.0"
+license = "MIT/Apache-2.0"
 repository = "https://github.com/kngwyu/error-chain-mini"
-homepage = "https://github.com/kngwyu/error-chain-mini"
+keywords = ["error", "derive"]
+categories = ["rust-patterns"]
 
 [dependencies]
 syn = "0.13.1"
