--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "kngwyu/error-chain-mini"
 
 [dev-dependencies.error-chain-mini-derive]
 path = "error-chain-mini-derive"
+version = "0.0.1"
 
 [workspace]
 members = ["error-chain-mini-derive"]
